# marketpulse-pro

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
config/: __init__.py  settings.py
src/: __init__.py  browser.py  exceptions.py  extractor.py  logger.py  reporter.py  scraper.py  validator.py
tests/: __init__.py  conftest.py  test_browser.py  test_config.py  test_extractor.py  test_pipeline.py  test_validator.py
