[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketpulse-pro"
version = "1.0.0"
description = "Enterprise-grade web scraping pipeline with resilience, observability, and intelligence capabilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "MarketPulse Engineering Team" }
]
keywords = ["web-scraping", "playwright", "data-pipeline", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.92.0",
    "time-machine>=2.13.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
]

[project.scripts]
marketpulse = "main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP046",  # Generic[T] syntax still preferred for Pydantic BaseModel compatibility
]

[tool.ruff.lint.per-file-ignores]
# Tests use fixtures via dependency injection (unused args), redefinitions for fresh imports,
# and assert statements as standard practice
"tests/*" = [
    "ARG001",  # Unused function argument (fixtures, mocker)
    "ARG002",  # Unused method argument (fixtures, mocker)
    "F811",    # Redefinition of unused name (reimporting get_config for cache isolation)
    "F841",    # Local variable assigned but never used (async with manager pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "plotly",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]